<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ic_discover"
        android:icon="@drawable/ic_bag"
        android:title="Discover" />

    <item
        android:id="@+id/ic_import_contacts"
        android:icon="@drawable/ic_import_contacts"
        android:title="@string/ic_import_contacts" />

    <item
        android:id="@+id/shopping_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/shopping_cart" />
    <item
        android:id="@+id/ic_loyalty"
        android:icon="@drawable/ic_loyalty"
        android:title="@string/ic_loyalty" />

    <item
        android:id="@+id/ic_account"
        android:icon="@drawable/ic_profile"
        android:title="@string/ic_account" />
</menu>
