<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Registetion_Activity"
    android:background="@drawable/background_top">

    <android.support.v7.widget.Toolbar
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="2dp"
            android:src="@drawable/ic_back"
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textAlignment="center"
            android:text="@string/create_account"
            android:textSize="18dp"
            android:paddingRight="30dp"
            android:textColor="@color/app_title_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:padding="13dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_top">


    <TextView
       android:text="@string/app_name"
       android:textSize="30dp"
       android:textColor="@color/app_title_color"
       android:textStyle="bold"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />
<View
    android:layout_width="match_parent"
    android:layout_height="40dp"/>

    <android.support.design.widget.TextInputLayout
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/email"
            android:drawableRight="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:paddingTop="1dp"
            android:singleLine="true"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/firstname"
            android:drawableRight="@drawable/ic_username"
            android:drawablePadding="5dp"
            android:paddingTop="1dp"
            android:singleLine="true"
            android:inputType="textAutoComplete" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/lastname"
            android:drawableRight="@drawable/ic_last_name"
            android:drawablePadding="5dp"
            android:paddingTop="1dp"
            android:singleLine="true"
            android:inputType="textAutoComplete" />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/password"
            android:drawableRight="@drawable/ic_pass"
            android:drawablePadding="5dp"
            android:paddingTop="1dp"
            android:singleLine="true"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:drawableRight="@drawable/ic_confirm_pass"
            android:drawablePadding="5dp"
            android:paddingTop="1dp"
            android:singleLine="true"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="@dimen/marginTop"
        android:background="@drawable/register_button"
        android:textColorHint="@color/app_title_color"
        android:hint="@string/register" />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

   <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
         android:layout_height="23dp">

    <View
        android:layout_width="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:layout_height="1dp"/>

       <TextView
           android:id="@+id/forgot_pass"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColorHint="@color/app_title_color"
           android:text="@string/forgot_password"
           android:padding="5dp"
           android:background="@drawable/background_null"
           android:textSize="10dp"
           android:textAlignment="center" />
       <View
           android:layout_width="0dp"
           android:layout_weight="1"
           android:background="@color/colorAccent"
           android:layout_height="1dp"/>

</LinearLayout>
    <View
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="42dp">
        <LinearLayout
            android:id="@+id/facebook_login"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/facebook_bg"
            android:layout_height="40dp">

            <ImageView
                android:src="@drawable/facebook_icon"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:layout_width="40dp"
                android:layout_height="40dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="FACEBOOK"
                android:padding="10dp"
                android:background="@null"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:textSize="15dp"  />
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/twitter_login"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/twitter_bg"
            android:layout_height="40dp">

            <ImageView
                android:src="@drawable/twiter_icon"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:layout_width="40dp"
                android:layout_height="40dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="TWITTER"
                android:padding="10dp"
                android:background="@null"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:textSize="15dp"  />
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>