<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_girl"
    android:orientation="vertical"
   >
    <android.support.v7.widget.Toolbar
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="2dp"
            android:src="@drawable/ic_arrow_back2"
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textAlignment="center"
            android:text="@string/start_screen"
            android:textSize="18dp"
            android:paddingRight="30dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="22dp"
        android:layout_margin="50dp"
        android:background="@drawable/background_top"
        android:orientation="vertical"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/app_title_color"
            android:textSize="33dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="18dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/app_title_color"
            android:text="@string/line2"
            android:textStyle="normal"
            android:textSize="14dp"
            android:textAlignment="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="38dp"/>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="REGISTER"
            android:background="@drawable/register_button"
            android:textColorHint="@color/app_title_color"
            android:textAlignment="center"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="38dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/app_title_color"
            android:text="@string/line3"
            android:textStyle="normal"
            android:textSize="12dp"
            android:textAlignment="center" />
        <View
            android:layout_width="match_parent"
            android:layout_height="38dp"/>
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/login_txt_color"
            android:text="SIGN IN"
            android:textStyle="normal"
            android:textSize="18dp"
            android:textAlignment="center" />
    </LinearLayout>



</LinearLayout>