<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/background_top">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/app_title_color"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="33dp"
        android:textAlignment="center" />

    <TextView
        android:layout_marginTop="7dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/app_title_color"
        android:text="@string/line2"
        android:textStyle="normal"
        android:textSize="14dp"
        android:textAlignment="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="25dp"/>


    <android.support.design.widget.TextInputLayout
        android:padding="8dp"
        android:background="@drawable/login_editxt_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:background="@null"
            android:hint="@string/email"
            android:drawableLeft="@drawable/ic_username"
            android:drawablePadding="5dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:padding="8dp"
        android:background="@drawable/login_editxt_bg"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:background="@null"
            android:hint="@string/password"
            android:drawableLeft="@drawable/ic_pass"
            android:drawablePadding="5dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="@dimen/marginTop20"
        android:background="@drawable/background_null"
        android:textColorHint="@color/app_title_color"
        android:hint="@string/login" />
    <View
        android:layout_width="match_parent"
        android:layout_height="22dp"/>


        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@color/app_title_color"
            android:text="@string/reset_password"
            android:padding="7dp"
            android:background="@drawable/background_null"
            android:textSize="10dp"
            android:textAlignment="center" />


    <View
        android:layout_width="match_parent"
        android:layout_height="22dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="42dp">
        <LinearLayout
            android:id="@+id/facebook_login"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/facebook_bg"
            android:layout_height="40dp">

            <ImageView
                android:src="@drawable/facebook_icon"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:layout_width="40dp"
                android:layout_height="40dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="FACEBOOK"
                android:padding="10dp"
                android:background="@null"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:textSize="15dp"  />
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/twitter_login"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/twitter_bg"
            android:layout_height="40dp">

            <ImageView
                android:src="@drawable/twiter_icon"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:layout_width="40dp"
                android:layout_height="40dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="TWITTER"
                android:padding="10dp"
                android:background="@null"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:textSize="15dp"  />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>