<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignInActivity"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="2dp"
            android:src="@drawable/ic_arrow_back2"
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textAlignment="center"
            android:text="@string/start_screen"
            android:textSize="18dp"
            android:paddingRight="30dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_girl"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="40dp" >
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="38dp"
        android:textAlignment="center" />

    <TextView
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/app_title_color"
        android:text="@string/line2"
        android:textStyle="normal"
        android:textSize="14dp"
        android:textAlignment="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <LinearLayout
        android:id="@+id/fb_login"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="4dp"
        android:background="@drawable/facebook_bg"
        android:orientation="horizontal"
        android:layout_height="wrap_content" >
        <ImageView
            android:src="@drawable/facebook_icon"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:textAlignment="center"
            android:textSize="14dp"
            android:text="@string/facebook"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="18dp"/>
    <LinearLayout
        android:id="@+id/twitter_login"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="4dp"
        android:background="@drawable/twitter_bg"
        android:orientation="horizontal"
        android:layout_height="wrap_content" >
        <ImageView
            android:src="@drawable/twiter_icon"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:textAlignment="center"
            android:textSize="14dp"
            android:text="@string/twitter"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="18dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="4dp"
        android:background="@drawable/google_bg"
        android:orientation="horizontal"
        android:layout_height="wrap_content" >
        <ImageView
            android:src="@drawable/google_icon"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:textAlignment="center"
            android:textSize="14dp"
            android:text="@string/google"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/background_null"
            android:hint="SIGN IN"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColorHint="@color/app_title_color"
            android:textSize="18dp"  />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColorHint="@color/app_title_color"
            android:hint="REGISTER"
            android:padding="10dp"
            android:background="@drawable/background_null"
            android:textSize="18dp"
            android:textAlignment="center" />

    </LinearLayout>
    </LinearLayout>
    </LinearLayout>


